--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
     
-    <title>React App</title>
+    <title>Split App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
